[package]
name = "tc-syncer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tc-syncer"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true, features = ["providers"] }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tc-rs = { path = "../tc-rs", default-features = false }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
