[package]
name = "tornadocash"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = []

[dependencies]
alloy = { workspace = true, features = [
    "rpc",
    "rpc-types",
    "network",
    "providers",
    "transports",
    "sol-types",
    "reqwest",
] }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
async-trait = { workspace = true }
common = { workspace = true }
ruint = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["rustls"] }
crypto = { workspace = true }
kohaku-db = { workspace = true }
web-time = { workspace = true }
hex = { workspace = true }
websnark-rs = { workspace = true }
brotli = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
postcard = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"] }
alloy = { workspace = true, features = ["signers", "signer-local"] }
kohaku-test-utils = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }
